discussion/kv_engine/129701/129701_rev2_discussion.txt
======================================================================================================================
DESCRIPTION:

Refactor: Rename dispatcher to network interface manager

Get rid of the "dispatcher thread" object and move its content
to memcached.cc as "network interface manager". This is a step
on the way to move the code into a new files to handle all
of the network interface management.

Change-Id: Ie56c6a4d24712d2ab13588c1f46c85f778b8c072

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2020-06-04 07:03:43.000000000
Message: 
Uploaded patch set 2: Patch Set 1 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2020-06-04 07:58:11.000000000
Message: 
Patch Set 2: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/2546/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/daemon/front_end_thread.h:140:9: error: no type named "char_buffer" in namespace "cb" [clang-diagnostic-error]
    cb::char_buffer getScratchBuffer() const {
        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/daemon/front_end_thread.h:141:20: error: no member named "char_buffer" in namespace "cb" [clang-diagnostic-error]
        return cb::char_buffer{const_cast<char*>(scratch_buffer.data()),
                   ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/daemon/front_end_thread.h:142:53: error: expected ";" after expression [clang-diagnostic-error]
                               scratch_buffer.size()};
                                                    ^
                                                    ;

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/2546/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/daemon/front_end_thread.h:140:9:
error: no type named "char_buffer" in namespace "cb" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/2546/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/28356/ : FAILURE

Failure of GoogleTest "$2":

<pre>
$1$2$3
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/28356/ )

Failure of a CTest test 289/392 Test #290: memcached_testapp.default.ShutdownTest ........................................................................................ ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/28356/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/3920/ : FAILURE

Failure of GoogleTest "$2":

<pre>
$1$2$3
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/3920/ )

Failure of a CTest test [2020-06-04T07:41:22.275Z] 233/397 Test #172: ep-engine_ep_unit_tests.AllBackends/DurabilityEPBucketTest ........................................................ ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/3920/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/4023/ : FAILURE

Failure of GoogleTest "$2":

<pre>
$1$2$3
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/4023/ )

Failure of a CTest test [2020-06-04T07:50:16.760Z]  60/387 Test #362: memcached_testapp.ep.CleanOrUnclean/PersistToTest ................................................................. ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/4023/ )

ThreadSanitizer issue: use of an invalid mutex (e.g. uninitialized or destroyed) (/home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_master/install/lib/libtsan.so.0+0x3876f) in __interceptor_pthread_mutex_lock  ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/4023/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/1062/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/24384/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/3024/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/3961/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/11799/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
